--- a/workflow/defaults/case.yaml
+++ b/workflow/defaults/case.yaml
@@ -5,31 +5,32 @@
 
 schedvar: !Immediate
   - !MergeMapping
+    - 0
     - !calc doc.case.get('schedvar',{})
-    - Template: *schedvar_schema
     - !calc doc.get('schedvar_defaults',{})
 
 mom_output_settings: !Immediate
   - !MergeMapping
-    - !calc doc.gfs_output_settings_defaults
-    - { Template: *gfs_output_settings_template }
-    - !calc doc.case.get('gfs_output_settings',{})
-    - !calc doc.get('user_gfs_output_settings',{})
+    - 0
+#    - !calc doc.gfs_output_settings_defaults
+#    - !calc doc.case.get('gfs_output_settings',{})
+#    - !calc doc.get('user_gfs_output_settings',{})
 
 data_assimilation: !Immediate
   - !MergeMapping
-    - { Template: *data_assimilation_template }
-    - !calc doc.case.get('data_assimilation',{})
-    - !calc doc.get('user_data_assimilation',{})
+    - 0
+#    - !calc doc.case.get('data_assimilation',{})
+#    - !calc doc.get('user_data_assimilation',{})
   
 post: !Immediate
   - !MergeMapping
-    - { Template: *post_schema }
-    - !calc doc.case.get('post',{})
-    - !calc doc.get('user_post',{})
+    - 0
+#    - !calc doc.case.get('post',{})
+#    - !calc doc.get('user_post',{})
 
 places: !Immediate
   - !MergeMapping
+    - 0
     - !calc doc.default_places
     - !calc doc.case.get('places',{})
     - !calc doc.user_places
@@ -40,11 +41,9 @@ service_resources: !calc doc.platform.partitions.default_service.resources
 
 settings: !Immediate
   - !MergeMapping
-    - Template: *settings_schema
     - !calc doc.default_settings
     - !calc doc.case.settings
-    - !calc doc.get('user_settings',{})
-    - Template: *settings_schema
+#    - !calc doc.get('user_settings',{})
 
 validate_me:
   - mom_output_settings
