--- a/workflow/defaults/places.yaml
+++ b/workflow/defaults/places.yaml
@@ -2,10 +2,13 @@
 # See the schema/places.yaml for details.
 default_places: &default_places
   PROJECT_DIR: !error Please select a project directory.
+  ROOT_GODAS_DIR: !calc ( tools.realpath(tools.abspath("../../")) ) 
   HOMEcrow:    !calc tools.crow_install_dir()
+  EXPDIR :     !expand '{PROJECT_DIR}/{doc.names.experiment}'
+  ROTDIR: !expand "{LONG_TERM_TEMP}/comrot/{doc.names.experiment}"
   SHORT_TERM_TEMP: !calc doc.platform.short_term_temp
   LONG_TERM_TEMP:  !calc doc.platform.long_term_temp
 #  SHORT_TERM_TEMP: !error GOT HERE
 #  LONG_TERM_TEMP:  !error GOT HERE TOO
-  YAMLDIR: !calc EXP_DIR
+  YAMLDIR: !calc EXPDIR
   rocoto_workflow_xml: !expand '{YAMLDIR}/workflow.xml'
