--- a/workflow/layout/3dvar_only.yaml
+++ b/workflow/layout/3dvar_only.yaml
@@ -1,37 +1,43 @@
 suite: !Cycle
-  <<: *suite_defaults
-
+      <<: *suite_defaults
       fcst_prep: !Task
         <<: *shared_task_template
-        Trigger: !Depend  analysis.at('-6:00:00')
-        resources: !calc partition.resources.fcst_prep
+        resources: !calc partition.resources.run_dwn
         config: [ base.yaml, prep.yaml ]
         J_JOB: J_FCST_PREP
 
       fcst_run: !Task
         <<: *exclusive_task_template
         Trigger: !Depend  fcst_prep & da_3dvar_run.at('-6:00:00')
-        resources: !calc partition.resources.fcst_run
+        resources: !calc partition.resources.run_dwn
         config: [ base.yaml, fcst.yaml ]
         J_JOB: J_FCST_RUN
 
       da_prep: !Task
         <<: *shared_task_template
         Trigger: !Depend  fcst_run
-        resources: !calc partition.resources.da_prep
+        resources: !calc partition.resources.run_dwn
         config: [ base.yaml, da.yaml ]
         J_JOB: J_DA_PREP
 
       da_3dvar_run: !Task
         <<: *exclusive_task_template
         Trigger: !Depend  da_prep
-        resources: !calc partition.resources.da_3dvar_run
+        resources: !calc partition.resources.run_dwn
         config: [ base.yaml, da.yaml ]
         J_JOB: J_3DVAR_RUN
 
       post: !Task
         <<: *shared_task_template
         Trigger: !Depend  da_3dvar_run
-        resources: !calc partition.resources.post
+        resources: !calc partition.resources.run_dwn
         config: [ base.yaml, post.yaml ]
         J_JOB: J_POST
+
+      final: !Task
+        <<: *service_task_template
+        Disable: !calc not metasched.type=="rocoto"
+        resources: !calc partition.resources.run_nothing
+        rocoto_command: /bin/true
+        RUN: gfs # useless but required
+
