--- a/workflow/platforms/_sandbox.yaml
+++ b/workflow/platforms/_sandbox.yaml
@@ -73,12 +73,7 @@ platform: !Platform
   #      export SITE="SURGE"
   #  fi
 
-  # Additional variables to send to Rocoto XML entities or ecflow edits.
-  metasched_more: !expand |
-    {metasched.defvar(doc.schedvar.exclusive_queue, doc.accounting.exclusive_partition.exclusive_queue)}
-    {metasched.defvar(doc.schedvar.shared_queue, doc.accounting.shared_partition.shared_queue)}
-    {metasched.defvar(doc.schedvar.service_queue, doc.accounting.service_partition.service_queue)}
-    {metasched.defvar(doc.schedvar.cpu_project, doc.accounting.cpu_project)}
+  metasched_more: {}
 
   partitions:
     Evaluate: false
@@ -94,20 +89,17 @@ platform: !Platform
 
       # shared_accounting_ref - accounting settings for shared jobs
       shared_accounting_ref:
-        queue: !calc metasched.varref(doc.schedvar.shared_queue)
-        project: !calc metasched.varref(doc.schedvar.cpu_project)
+        project: !calc metasched.varref(doc.accounting.cpu_project)
 
       # service_accounting_ref - accounting settings for service jobs (jobs
       # that require tape or network access)
       service_accounting_ref:
-        queue: !calc metasched.varref(doc.schedvar.service_queue)
-        project: !calc metasched.varref(doc.schedvar.cpu_project)
+        project: !calc metasched.varref(doc.accounting.cpu_project)
 
       # exclusive_accounting_ref - accounting settings for jobs that require
       # exclusive access to a node.
       exclusive_accounting_ref:
-        queue: !calc metasched.varref(doc.schedvar.exclusive_queue)
-        project: !calc metasched.varref(doc.schedvar.cpu_project)
+        project: !calc metasched.varref(doc.accounting.cpu_project)
 
       # Queues to use for each job type.  This logic automatically
       # switches between development queues on the backup machine and
