--- a/workflow/runtime/suite.yaml
+++ b/workflow/runtime/suite.yaml
@@ -14,18 +14,16 @@ suite_defaults: &suite_defaults
       <?xml version="1.0"?>
       <!DOCTYPE workflow [
         <!-- experiment specific parameters -->
-        <!ENTITY ROOT_GODAS_DIR "{doc.settings.ROOT_GODAS_DIR}">
-        <!ENTITY ROOT_EXP_DIR "{doc.settings.EXPDIR}">
+        <!ENTITY ROOT_GODAS_DIR "{doc.places.ROOT_GODAS_DIR}">
+        <!ENTITY ROOT_EXP_DIR "{doc.places.EXPDIR}">
         <!ENTITY TASK_THROTTLE "{doc.settings.rocoto_task_throttle}">
         <!ENTITY CYCLE_THROTTLE "{doc.settings.rocoto_cycle_throttle}">
         <!ENTITY MAX_TRIES "{doc.settings.max_job_tries}">
         <!ENTITY EXP_NAME "{doc.places.EXPDIR}">
         <!ENTITY COM "{doc.places.ROTDIR}">
-        <!ENTITY ENS_LIST_FCST "{doc.settings.fcst_hours}">
+        <!ENTITY ENS_LIST_DA "{doc.settings.fcst_hours}">
         <!ENTITY ENS_LIST_DA "{doc.settings.da_hours}">
-        <!ENTITY {doc.schedvar.script_home} "{doc.places.HOMEgodas}">
         <!ENTITY COM "{doc.places.ROTDIR}">
-      {tools.indent(doc.platform.metasched_more,"  ")}
       ]>
       <workflow realtime="F"
                 cyclethrottle="&CYCLE_THROTTLE;"
