manual mode set up

--- a/workflow/_expdir_main_manual.yaml
+++ b/workflow/_expdir_main_manual.yaml
@@ -9,8 +9,10 @@
 include:
   - names.yaml
   - platform.yaml
-  - 'static*yaml'
   - case.yaml
   - runtime/
   - workflow.yaml
-
+  - top.yaml
+  - resources.yaml
+  - base.yaml
+  - places.yaml
