--- a/workflow/runtime/suite.yaml
+++ b/workflow/runtime/suite.yaml
@@ -19,7 +19,7 @@ suite_defaults: &suite_defaults
         <!ENTITY TASK_THROTTLE "{doc.settings.rocoto_task_throttle}">
         <!ENTITY CYCLE_THROTTLE "{doc.settings.rocoto_cycle_throttle}">
         <!ENTITY MAX_TRIES "{doc.settings.max_job_tries}">
-        <!ENTITY EXP_NAME "{doc.places.EXPDIR}">
+        <!ENTITY EXPDIR "{doc.places.EXPDIR}">
         <!ENTITY COM "{doc.places.ROTDIR}">
         <!ENTITY ENS_LIST_DA "{doc.settings.fcst_hours}">
         <!ENTITY ENS_LIST_DA "{doc.settings.da_hours}">
