--- a/workflow/layout/3dvar_only.yaml
+++ b/workflow/layout/3dvar_only.yaml
@@ -3,7 +3,6 @@ suite: !Cycle
       fcst_prep: !Task
         <<: *shared_task_template
         resources: !calc partition.resources.run_nothing
-        rocoto_command: "echo fcst_prep"
         config: [ base.yaml, prep.yaml ]
         J_JOB: J_FCST_PREP
 
@@ -11,7 +10,6 @@ suite: !Cycle
         <<: *exclusive_task_template
         Trigger: !Depend  fcst_prep & ( da_3dvar_run.at('-6:00:00') | ~ suite.has_cycle('-6:00:00') )
         resources: !calc partition.resources.run_nothing
-        rocoto_command: "echo fcst_run"
         config: [ base.yaml, fcst.yaml ]
         J_JOB: J_FCST_RUN
 
@@ -19,7 +17,6 @@ suite: !Cycle
         <<: *shared_task_template
         Trigger: !Depend  fcst_run
         resources: !calc partition.resources.run_nothing
-        rocoto_command: "echo da_prep"
         config: [ base.yaml, da.yaml ]
         J_JOB: J_DA_PREP
 
@@ -27,7 +24,6 @@ suite: !Cycle
         <<: *exclusive_task_template
         Trigger: !Depend  da_prep
         resources: !calc partition.resources.run_nothing
-        rocoto_command: "echo da_3dvar_run"
         config: [ base.yaml, da.yaml ]
         J_JOB: J_3DVAR_RUN
 
@@ -35,7 +31,7 @@ suite: !Cycle
         <<: *shared_task_template
         Trigger: !Depend  da_3dvar_run
         resources: !calc partition.resources.run_nothing
-        rocoto_command: "echo post"
+#        rocoto_command: "echo post"
         config: [ base.yaml, post.yaml ]
         J_JOB: J_POST
 
